--- a/components/Popup/styles.css
+++ b/components/Popup/styles.css
@@ -4,24 +4,26 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: #000;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .popup-content {
-    background: white;
+    background: transparent;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     border-radius: 10px;
-    text-align: center;
+    text-align: left;
     width: 300px;
     position: relative;
 }
 
 .popup-close {
     position: absolute;
-    top: 10px;
+    top: 15px;
     right: 10px;
     border: none;
     background: none;
