--- a/app/character/[name]/styles.css
+++ b/app/character/[name]/styles.css
@@ -1,25 +1,27 @@
-.splash {
+.view-character {
     position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
+    padding: 20px;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
-.splash::before {
+.view-character::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/images/splash.webp");
+    background-image: url("/images/view-character.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.5; 
     z-index: -1;
 }
-
