--- a/styles/font.css
+++ b/styles/font.css
@@ -1,13 +1,12 @@
 h1, h2, h3, label {
     font-family: var(--font-secondary), sans-serif;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Adds dark drop shadow */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 p, button, input {
     font-family: var(--font-primary), sans-serif;
 }
 
-/* Title Section */
 .title {
     margin-bottom: 20px;
 }
@@ -15,20 +14,23 @@ p, button, input {
 .title h1, .title h2 {
     padding: 0;
     margin: 0;
-    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8); /* Stronger shadow for main titles */
+    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8); 
 }
 
 .title h1 {
     font-size: 50px;
 }
 
-/* Labels */
+.version{
+    font-family: var(--font-primary), sans-serif;
+}
+
+
 label {
     font-weight: 600;
 }
 
-/* Error Text */
 .error {
     color: var(--error);
-    text-shadow: 1px 1px 2px rgba(255, 0, 0, 0.6); /* Subtle red shadow */
+    text-shadow: 1px 1px 2px rgba(255, 0, 0, 0.6);
 }
